Implemented authentication and authorization

--- a/linkedin-clone-fe/src/app/home/components/profile-summary/profile-summary.component.html
+++ b/linkedin-clone-fe/src/app/home/components/profile-summary/profile-summary.component.html
@@ -1,9 +1,19 @@
 <ion-card>
-  <div class="backdrop">
-    <div class="background-one"></div>
-    <div class="half-ellipse"></div>
-    <div class="background-two"></div>
-    <div class="background-three"></div>
+  <div
+    [style.background]="this.bannerColors.colorTwo"
+    class="backdrop">
+    <div
+      [style.background]="this.bannerColors.colorOne"
+      class="background-one"></div>
+    <div
+      [style.background]="this.bannerColors.colorOne"
+      class="half-ellipse"></div>
+    <div
+      [style.background]="this.bannerColors.colorTwo"
+      class="background-two"></div>
+    <div
+      [style.background]="this.bannerColors.colorThree"
+      class="background-three"></div>
   </div>
 
   <ion-card-header class="ion-text-center">
