--- a/linkedin-clone-fe/src/app/home/components/header/popover/popover.component.html
+++ b/linkedin-clone-fe/src/app/home/components/header/popover/popover.component.html
@@ -4,11 +4,11 @@
       <ion-row class="ion-align-items-center ion-justify-content-center">
         <ion-col size="auto">
           <ion-avatar>
-            <ion-img src=""></ion-img>
+            <ion-img *ngIf="userFullImagePath" src="userFullImagePath"></ion-img>
           </ion-avatar>
         </ion-col>
         <ion-col>
-          <ion-card-title>John Doe</ion-card-title>
+          <ion-card-title>{{ fullName }}</ion-card-title>
           <ion-card-subtitle>Full Stack Developer</ion-card-subtitle>
         </ion-col>
       </ion-row>
