--- a/linkedin-clone-fe/src/app/home/components/start-post/modal/modal.component.html
+++ b/linkedin-clone-fe/src/app/home/components/start-post/modal/modal.component.html
@@ -15,12 +15,12 @@
     <ion-row class="ion-justify-content-start">
       <ion-col size="auto">
         <ion-avatar>
-          <ion-img [src]=""></ion-img>
+          <ion-img *ngIf="userFullImagePath" [src]="userFullImagePath"></ion-img>
         </ion-avatar>
       </ion-col>
       <ion-col>
         <div>
-          <ion-text>Name</ion-text>
+          <ion-text>{{ fullName }}</ion-text>
         </div>
         <ion-button size="small" shape="round" fill="outline" color="medium">
           <ion-icon color="dark" name="globe-outline"></ion-icon>
