--- a/linkedin-clone-fe/src/app/home/components/start-post/start-post.component.html
+++ b/linkedin-clone-fe/src/app/home/components/start-post/start-post.component.html
@@ -1,7 +1,7 @@
 <ion-card>
   <ion-card-header>
     <ion-avatar>
-      <ion-img [src]=""></ion-img>
+      <ion-img *ngIf="userFullImagePath" [src]="userFullImagePath"></ion-img>
     </ion-avatar>
 
     <ion-button
