--- a/linkedin-clone-fe/src/app/home/components/header/popover/popover.component.html
+++ b/linkedin-clone-fe/src/app/home/components/header/popover/popover.component.html
@@ -4,7 +4,7 @@
       <ion-row class="ion-align-items-center ion-justify-content-center">
         <ion-col size="auto">
           <ion-avatar>
-            <ion-img *ngIf="userFullImagePath" src="userFullImagePath"></ion-img>
+            <ion-img [src]="userFullImagePath"></ion-img>
           </ion-avatar>
         </ion-col>
         <ion-col>
