--- a/linkedin-clone-fe/src/app/home/components/all-posts/all-posts.component.html
+++ b/linkedin-clone-fe/src/app/home/components/all-posts/all-posts.component.html
@@ -5,12 +5,12 @@
         <ion-grid>
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="auto" class="ion-padding">
-              <ion-avatar style="cursor: pointer">
-                <ion-img *ngIf="post.fullImagePath" [src]="post.fullImagePath"></ion-img>
+              <ion-avatar style="cursor: pointer" [routerLink]="['/', 'home', post.author.id]">
+                <ion-img [src]="post.fullImagePath"></ion-img>
               </ion-avatar>
             </ion-col>
             <ion-col>
-              <div style="cursor: pointer" class="full-name">
+              <div style="cursor: pointer" [routerLink]="['/', 'home', post.author.id]" class="full-name">
                {{ post.author.firstName }} {{ post.author.lastName }}
               </div>
               <div class="role">Full Stack Developer</div>
