--- a/linkedin-clone-fe/src/app/home/components/header/popover/popover.component.html
+++ b/linkedin-clone-fe/src/app/home/components/header/popover/popover.component.html
@@ -34,6 +34,6 @@
   <div class="item-divider"></div>
 
     <ion-card-content>
-      <p (click)="onSignOut()">Sign Out</p>
+      <p class="sign-out" (click)="onSignOut()">Sign Out</p>
     </ion-card-content>
 </ion-card>
